tests/paczka1/fuzzy1/66274591.err
Error in line 19: TGr83iw A483 38,84
Error in line 36: n5rVhueGP S759 26,1
